# valhalla-mobile

./: .gitignore  .gitmodules  .spi.yml  AGENTS.md  CONTRIBUTING.md  LICENSE.md  Package.resolved  Package.swift  README.md  build.sh  index.html  navigation.html  openapi.yaml  package-lock.json  package.json
-valhalla -mobile/: package-list
-valhalla -mobile/com.valhalla.valhalla/: index.html
-valhalla -mobile/com.valhalla.valhalla.config/: index.html
-valhalla -mobile/com.valhalla.valhalla.config/-valhalla-config-manager/: -valhalla-config-manager.html  get-absolute-path.html  index.html  write-config.html
-valhalla -mobile/com.valhalla.valhalla.files/: copy-asset-file-to-storage.html  index.html  load-asset-file.html
-valhalla -mobile/com.valhalla.valhalla.files/-valhalla-file/: -valhalla-file.html  absolute-path.html  delete.html  exists.html  index.html  write-bytes.html  write-text.html
-valhalla -mobile/com.valhalla.valhalla.files/-valhalla-file/-companion/: index.html  using-asset.html
-valhalla -mobile/com.valhalla.valhalla/-error-response/: -error-response.html  code.html  index.html  message.html  to-string.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla/: -valhalla.html  index.html  route.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-exception/: index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-exception/-internal/: -internal.html  index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-exception/-invalid-error/: -invalid-error.html  index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-exception/-invalid-response/: -invalid-response.html  index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-exception/-not-supported/: -not-supported.html  index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-response/: index.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-response/-json/: -json.html  index.html  json-response.html
-valhalla -mobile/com.valhalla.valhalla/-valhalla-response/-osrm/: -osrm.html  index.html  osrm-response.html
.github/workflows/: android.yml  build.yml  docs.yml  ios-beta.yml  ios-main.yml  ios-release-final.yml  ios-release.yml  ios-test.yml  ios.yml  ios26.yml  release.yml  test-ios.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/jacob.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcshareddata/xcschemes/: ValhallaMobile.xcscheme
.swiftpm/xcode/xcuserdata/jacob.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
.swiftpm/xcode/xcuserdata/jacob.xcuserdatad/xcschemes/: xcschememanagement.plist
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/valhalla/mobile/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/valhalla/mobile/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/valhalla/: build.gradle.kts  consumer-rules.pro
android/valhalla/docs/: Config.md  Files.md  Index.md  MapMatching.md  Valhalla.md
android/valhalla/src/androidTest/assets/: config.json  expected.json
android/valhalla/src/androidTest/java/com/valhalla/valhalla/: TestFileUtils.kt  ValhallaActorTest.kt  ValhallaHttpTileTest.kt  ValhallaInstrumentedTest.kt  ValhallaJsonFormatTileTarTest.kt  ValhallaOsrmFormatTileTarTest.kt  ValhallaTest.kt  ValhallaTileDirOnlyTest.kt  ValhallaTraceAttributesTest.kt
android/valhalla/src/main/docs/: Valhalla.md
android/valhalla/src/main/java/com/valhalla/valhalla/: Valhalla.kt  ValhallaActor.kt  ValhallaException.kt  ValhallaKotlin.kt  ValhallaResponse.kt
android/valhalla/src/test/java/com/valhalla/valhalla/: EmptyTest.kt
apple/Sources/Tests/ValhallaTests/TestData/: expected.json
apple/Sources/Valhalla/: TZDatabaseManager.swift  Valhalla.swift  ValhallaError.swift  ValhallaFileManager.swift
apple/Sources/Valhalla/Errors/: ValhallaError.swift
apple/Sources/Valhalla/Extensions/: ValhallaConfig.swift  ValhallaConfig~.swift
apple/Sources/Valhalla/Models/: ValhallaErrorModel.swift
apple/Sources/Valhalla/SupportData/: default.json  tzdata.tar
apple/Sources/Valhalla/Valhalla.docc/: Valhalla.md
apple/Sources/ValhallaObjc/: ValhallaWrapper.mm
apple/Sources/ValhallaObjc/include/: ValhallaWrapper.h
apple/Tests/ValhallaTests/: TestFileSystemConfig.swift  TestValhallaWithFolder.swift  TestValhallaWithTar.swift  ValhallaTestCase.swift  ValhallaTests.swift
apple/Tests/ValhallaTests/TestData/: config.json
apple/Tests/ValhallaTests/TestData/valhalla_tiles/0/003/: 015.gph
apple/Tests/ValhallaTests/TestData/valhalla_tiles/1/046/: 150.gph  151.gph
apple/Tests/ValhallaTests/TestData/valhalla_tiles/1/047/: 701.gph
apple/Tests/ValhallaTests/TestData/valhalla_tiles/2/000/740/: 443.gph
apple/Tests/ValhallaTests/TestData/valhalla_tiles/2/000/762/: 485.gph
docs/: development.md
docs/android/: dokka.md
docs/src/: architecture.md  bumping-valhalla.md  ios-tzdata.md
scripts/: build_android.sh  build_android_vcpkg.sh  build_apple.sh  build_apple_vcpkg.sh  build_apple_vcpkg_old.sh  build_ios.sh  build_protoc_local.sh  create_fixtures.sh  create_xcframework.sh  create_xcframework_vcpkg.sh  gen_config.sh  gen_model_openapi.sh  move_android_so.sh  pages.json  sourceset_dependencies.js  version_bump.sh  write_xcframework_spm.sh
scripts/deprecated/: build_android_legacy.sh  build_apple_legacy.sh
src/: CMakeLists.txt  vcpkg.json
src/wrapper/: CMakeLists.txt  jni_http_client.cpp  main.cpp  valhalla_actor.cpp
src/wrapper/include/: jni_http_client.h  main.h  valhalla_actor.h
triplets/: arm-android.cmake  arm64-ios-simulator.cmake  arm64-ios.cmake  x64-android.cmake  x64-ios-simulator.cmake
wrapper/: build.gradle.kts
wrapper/src/androidTest/java/com/valhalla/wrapper/: ExampleInstrumentedTest.kt
wrapper/src/main/java/com/valhalla/wrapper/: Valhalla.kt
wrapper/src/test/java/com/valhalla/wrapper/: ExampleUnitTest.kt
(+17 files in other folders)
